# commitizen_cz_template

./: README.md  cookiecutter.json  pyproject.toml
.github/workflows/: bumpversion.yaml
{{cookiecutter.cz_name}}/: README.md  cz_{{cookiecutter.cz_name}}.py  setup.py
