[project]
name = "commitizen_cz_template"
version = "0.1.0"
description = "Template for commitizen cz"
requires-python = ">=3.10,<4.0"
dependencies = [
    "commitizen>=3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.entry-points."commitizen.plugin"]
cz_{{cookiecutter.cz_name}} = "cz_{{cookiecutter.cz_name}}:{{cookiecutter.cz_name | capitalize}}Cz"